--- a/src/components/Expenses/Expenses.css
+++ b/src/components/Expenses/Expenses.css
@@ -7,3 +7,8 @@
     border-radius: 12px;
     box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
 }
+.expenses1 {
+    padding: 0.2rem;
+    margin: 0.2rem auto;
+    color: whitesmoke;
+}
